#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2002 Mark Wong & Open Source Development Labs, Inc.
#

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = . src storedproc

# FIXME: do we need all these files in the distribution?
EXTRA_DIST = \
LICENSE \
README \
README-FREEBSD \
README-MYSQL \
README-POSTGRESQL \
storedproc/Makefile.am \
storedproc/pgsql/Makefile.am \
storedproc/pgsql/c/Makefile.am \
storedproc/pgsql/c/funcs.c \
storedproc/pgsql/c/delivery.sql.in \
storedproc/pgsql/c/new_order.sql.in \
storedproc/pgsql/c/order_status.sql.in \
storedproc/pgsql/c/payment.sql.in \
storedproc/pgsql/c/stock_level.sql.in \
storedproc/pgsql/delivery.sql \
storedproc/pgsql/new_order.sql \
storedproc/pgsql/new_order_2.sql \
storedproc/pgsql/order_status.sql \
storedproc/pgsql/payment.sql \
storedproc/pgsql/stock_level.sql \
storedproc/sapdb/7.0.3.29/delivery.sql \
storedproc/sapdb/7.0.3.29/delivery_2.sql \
storedproc/sapdb/7.0.3.29/new_order.sql \
storedproc/sapdb/7.0.3.29/new_order_2.sql \
storedproc/sapdb/7.0.3.29/order_status.sql \
storedproc/sapdb/7.0.3.29/payment.sql \
storedproc/sapdb/7.0.3.29/stock_level.sql \
storedproc/sapdb/delivery.sql \
storedproc/sapdb/delivery_2.sql \
storedproc/sapdb/new_order.sql \
storedproc/sapdb/new_order_2.sql \
storedproc/sapdb/order_status.sql \
storedproc/sapdb/payment.sql \
storedproc/sapdb/stock_level.sql \
storedproc/mysql/delivery.sql \
storedproc/mysql/new_order.sql \
storedproc/mysql/new_order_2.sql \
storedproc/mysql/order_status.sql \
storedproc/mysql/payment.sql \
storedproc/mysql/stock_level.sql \
bin/dbt2_profile.in \
bin/generate-report \
bin/notpm.input \
bin/post-process \
bin/run_workload.sh.in \
bin/sysstats.sh.in \
bin/transform_iostat.pl \
bin/transform_sar.sh.in \
bin/vmplot.sh \
bin/Linux/get_os_info.sh.in \
bin/SunOS/get_os_info.sh.in \
bin/mysql/dbt2-mysql-build-db.in  \
bin/mysql/dbt2-mysql-load-sp  \
bin/mysql/dbt2-mysql-plans.in \
bin/mysql/mysql_profile.in \
bin/pgsql/dbt2-pgsql-analyze-stats \
bin/pgsql/dbt2-pgsql-build-db.in \
bin/pgsql/dbt2-pgsql-check-db.in \
bin/pgsql/dbt2-pgsql-create-db.in \
bin/pgsql/dbt2-pgsql-create-indexes.in \
bin/pgsql/dbt2-pgsql-create-tables.in \
bin/pgsql/dbt2-pgsql-db-stat.in \
bin/pgsql/dbt2-pgsql-destroy-installation.in \
bin/pgsql/dbt2-pgsql-drop-db.in \
bin/pgsql/dbt2-pgsql-drop-tables.in \
bin/pgsql/dbt2-pgsql-install-source \
bin/pgsql/dbt2-pgsql-load-db.in \
bin/pgsql/dbt2-pgsql-load-stored-procs.in \
bin/pgsql/dbt2-pgsql-plans.in \
bin/pgsql/dbt2-pgsql-start-db \
bin/pgsql/dbt2-pgsql-stop-db \
bin/pgsql/dbt2-pgsql-test.in \
bin/pgsql/pg_hba.conf \
bin/pgsql/pgpool.conf \
bin/pgsql/pgsql_profile.in \
bin/sapdb/db_create_stats/info/space_used_all.sh \
bin/sapdb/db_create_stats/info/space_used_index.sh \
bin/sapdb/db_create_stats/info/space_used_leaf.sh \
bin/sapdb/db_create_stats/info/tableinfo.sh \
bin/sapdb/db_create_stats/queries/doit.sh \
bin/sapdb/db_create_stats/queries/qCUSTOMER \
bin/sapdb/db_create_stats/queries/qDISTRICT \
bin/sapdb/db_create_stats/queries/qHISTORY \
bin/sapdb/db_create_stats/queries/qITEM \
bin/sapdb/db_create_stats/queries/qNEW_ORDER \
bin/sapdb/db_create_stats/queries/qORDERS \
bin/sapdb/db_create_stats/queries/qORDER_LINE \
bin/sapdb/db_create_stats/queries/qSTOCK \
bin/sapdb/db_create_stats/queries/qWAREHOUSE \
bin/sapdb/db_create_stats/get_it_all.sh \
bin/sapdb/db_create_stats/runsql.sh \
bin/sapdb/backup_db.sh \
bin/sapdb/create_db_sample.sh \
bin/sapdb/create_indexes.sh \
bin/sapdb/create_tables.sql \
bin/sapdb/customer.sql \
bin/sapdb/db_setup.sh \
bin/sapdb/db_stats.sh \
bin/sapdb/district.sql \
bin/sapdb/drop_db.sh \
bin/sapdb/drop_dbproc.sh \
bin/sapdb/history.sql \
bin/sapdb/item.sql \
bin/sapdb/load_dbproc.sh \
bin/sapdb/new_order.sql \
bin/sapdb/order_line.sql \
bin/sapdb/orders.sql \
bin/sapdb/plan.sh \
bin/sapdb/restore_db.sh \
bin/sapdb/start_db.sh \
bin/sapdb/stock.sql \
bin/sapdb/stop_db.sh \
bin/sapdb/trace_off.sh \
bin/sapdb/trace_on.sh \
bin/sapdb/update_stats.sh \
bin/sapdb/warehouse.sql \
doc/Makefile \
doc/maintenance.sxw \
doc/class.dia \
doc/component.dia \
doc/sapdb_sizing.sxc \
doc/dbt2-architecture.tex \
doc/dbt2-user.tex \
doc/dbt2-tpc.tex

